# haskell2package

./: .gitignore  LICENSE  Makefile  README.md  TEMPLATE.spec  anchor_repos.py  borel.cabal  find_cabal_build_deps.sh  haskell2package.cabal  macros.m4  parse_cabal_file.sh  run.sh  stack.yaml
files/: TEMPLATE.spec  control  getDebDeps.sh
lib/Anchor/Package/: Process.hs  SpecFile.hs  Template.hs  Types.hs
src/: Deb.hs  Info.hs  Main.hs  Rpm.hs
templates/: TEMPLATE.spec  control
