cabal-version:       >=1.10
name:                borel
version:             0.9.0
synopsis:            High-resolution billing data generation.
license:             BSD3
license-file:        LICENSE
author:              Anchor Engineering <engineering@anchor.com.au>
maintainer:          Anchor Engineering <engineering@anchor.com.au>
copyright:           © 2013-2014 Anchor Systems, Pty Ltd and Others
category:            Other
tested-with:         GHC == 7.8.3
stability:           experimental
build-type:          Simple

library
  hs-source-dirs:    lib
  default-language:  Haskell2010

  exposed-modules:   Borel.Types,
                     Borel.Env,
                     Borel.Action,
                     Resource.Ceilometer,
                     Resource.Ceilometer.Gauge,
                     Resource.Ceilometer.Cumulative,
                     Resource.Ceilometer.Consolidated,
                     Resource.Ceilometer.Consolidated.Types,
                     Resource.Ceilometer.Consolidated.Parse,
                     Resource.Ceilometer.Consolidated.Query,
                     Resource.Mapping,
                     Resource.Log,
                     Resource.Anchor,
                     Resource.Bipipe,
                     Resource.Types,
                     Common.WAI,
                     Resource.Parse.Tags,
                     Resource.Parse.APIUser,
                     Resource.Parse.Customer,
                     Resource.Parse.Tenancy,
                     Resource.Parse.IPAlloc

  build-depends:     base >=4.7 && <4.8,
                     containers >=0.5 && <0.6,
                     binary,
                     mtl,
                     transformers,
                     data-default,
                     time,
                     old-locale,
                     iproute,
                     aeson,
                     cassava,
                     text,
                     bytestring,
                     attoparsec,
                     either,
                     pipes,
                     pipes-attoparsec,
                     pipes-aeson,
                     pipes-parse,
                     pipes-safe,
                     pipes-http,
                     http-types,
                     http-client,
                     http-client-tls,
                     lens,
                     blaze-builder,
                     wai,
                     scotty,
                     network < 2.6,
                     fast-logger,
                     monad-logger,
                     siphash,
                     vaultaire-common,
                     chevalier-common >= 0.4.0,
                     vaultaire-query >= 0.4.4,
                     marquise,
                     vaultaire-control

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

executable borel-server
  hs-source-dirs:     src
  default-language:   Haskell2010
  main-is:            Server.hs

  build-depends:     base >=4.7 && <4.8,
                     containers >=0.5 && <0.6,
                     mtl,
                     transformers,
                     exceptions,
                     either,
                     data-default,
                     time,
                     old-locale,
                     iproute,
                     aeson,
                     cassava,
                     text,
                     bytestring,
                     optparse-applicative == 0.9.*,
                     pipes,
                     pipes-aeson,
                     pipes-csv,
                     pipes-parse,
                     pipes-safe,
                     pipes-http,
                     http-types,
                     http-client,
                     http-client-tls,
                     lens,
                     blaze-builder,
                     wai,
                     warp,
                     scotty,
                     network < 2.6,
                     fast-logger,
                     monad-logger,
                     vaultaire-common >= 2.7.0,
                     chevalier-common >= 0.4.0,
                     vaultaire-control,
                     vaultaire-query >= 0.4.4,
                     borel

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

executable legacy-billing
  hs-source-dirs:     src
  default-language:   Haskell2010
  main-is:            Legacy.hs

  build-depends:     base >=4.7 && <4.8,
                     containers >=0.5 && <0.6,
                     mtl,
                     transformers,
                     text,
                     base64-bytestring,
                     iproute,
                     data-default,
                     postgresql-simple,
                     old-locale,
                     bytestring,
                     optparse-applicative == 0.9.*,
                     pipes,
                     pipes-csv,
                     pipes-safe,
                     pipes-bytestring,
                     http-types,
                     blaze-builder,
                     wai,
                     scotty,
                     monad-logger,
                     bifunctors,
                     vector,
                     cassava,
                     chevalier-common >= 0.4.0,
                     vaultaire-common,
                     vaultaire-control,
                     vaultaire-query >= 0.4.4,
                     borel >= 0.7.0

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto
