name:                haskell2package
version:             1.1.0
synopsis:            Builds RPMs from Haskell projects
description:         Parses cabal files and generates a specfile, which is then used
                     to build an rpm, appropriately managing Anchor dependencies.
license:             BSD3
license-file:        LICENSE
author:              Oswyn Brent
maintainer:          Anchor Engineering <engineering@anchor.net.au>
copyright:           Anchor Engineering 2014
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.18

library
  exposed-modules:     Anchor.Package.Process
                       Anchor.Package.Types
                       Anchor.Package.SpecFile
  build-depends:       base >=4.7,
                       containers >=0.5,
                       Cabal >=1.18,
                       process >=1.2,
                       github,
                       mtl,
                       time,
                       old-locale,
                       transformers,
                       directory,
                       MissingH
  hs-source-dirs:      lib
  default-language:    Haskell2010

executable haskell2package
  main-is:             Main.hs
  build-depends:       base >=4.7,
                       haskell2package

  hs-source-dirs:      src
  default-language:    Haskell2010
